# pa-bench

./: .gitignore  Cargo.toml  LICENSE  README.md  evals.ipynb  makefile
analysis/: evals.ipynb
evals/: evals.ipynb
evals/analysis/: evals.ipynb
evals/astarpa/: README.md  evals.ipynb  makefile
evals/astarpa-next/: evals.ipynb  justfile
evals/astarpa-next/experiments/: presentation-bench.yaml  presentation.yaml  real-affine.yaml  real-test.yaml  real.yaml  tmp.yaml
evals/astarpa/experiments/: memory.yaml  params.yaml  params_real.yaml  real.yaml  scaling_e.yaml  scaling_n.yaml  timing.yaml  timing_real.yaml  tools.yaml
evals/astarpa2/: README.md  evals.ipynb  justfile
evals/astarpa2/experiments/: real-ablation.yaml  real-before-summary.yaml  real-heuristic.yaml  real-incremental-slides.yaml  real-incremental.yaml  real-params.yaml  real-summary.yaml  real-timing.yaml  real-vis.yaml  real.yaml  scaling-e.yaml  scaling-n.yaml
evals/data/: Snakefile
evals/experiments/: affine.yaml  affine_cost_scaling.yaml  affine_insert.yaml  datasets.yaml  default_args_test.yaml  downloads.yaml  path_test.yaml  test.yaml  two-pager.yaml  unit.yaml
evals/experiments/astarpa/: real.yaml  scaling_e.yaml  scaling_n.yaml  scaling_n_fast.yaml  scaling_n_slow.yaml  tools.yaml  tools_high_e.yaml  tools_low_e.yaml
evals/experiments/tests/: aligners_unit.yaml  astar_params.yaml  cpu_freq.yaml  dataset_types.yaml  default_args.yaml  ksw2-error.yaml  largestgap.yaml  limits.yaml  triple_accel_bug.yaml
evals/jobs/: affine.yaml  cpu_freq_test.yaml  downloads.yaml
jobs/: affine.yaml  affine_insert.yaml  cpu_freq_test.yaml  downloads.yaml  full.yaml  path_test.yaml  test.yaml  unit.yaml
orchestrator/: Cargo.toml  README.md
orchestrator/src/: config.rs  generator.rs  main.rs  stats.rs
pa-bench/: Cargo.toml
pa-bench-types/: Cargo.toml
pa-bench-types/src/: algorithms.rs  experiments.rs  lib.rs  stats.rs
pa-bench/examples/: split_seq.rs  test.rs
pa-bench/src/: bench.rs  main.rs  runner.rs
pa-bin/: Cargo.toml
pa-bin/src/: main.rs
pa-wrapper/: Cargo.toml
pa-wrapper/src/: lib.rs
pa-wrapper/src/wrappers/: astarnw.rs  astarpa.rs  astarpa2.rs  block_aligner.rs  edlib.rs  ksw2.rs  parasail.rs  triple_accel.rs  wfa.rs
runner/: Cargo.toml
runner/src/: bench.rs  main.rs
runner/src/wrappers/: astarnw.rs  astarpa.rs  block_aligner.rs  block_aligner_wrapper.rs  edlib.rs  ksw2.rs  mod.rs  parasail.rs  parasail_wrapper.rs  triple_accel.rs  wfa.rs
src/: bench.rs  main.rs  params.rs
