[workspace]
members = [
    "pa-wrapper",
    "pa-bin",
    "pa-bench-types",
    "pa-bench",
]
# 'cargo run' runs 'pa-bench', not 'pa-bin'.
default-members = ["pa-bench"]
resolver = "2"

# TODO: Make a separate benchmarking profile?
[profile.release]
# Debug settings
# lto = "thin"
# incremental = true
# debug = true
# strip = false

# Release settings
incremental = false
debug = false
strip = true
lto = true
codegen-units = 1
