[package]
name = "orchestrator"
authors = ["Daniel Liu", "Ragnar Groot Koerkamp"]
description = "A binary to run and benchmark multiple pairwise alignment tasks."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-bench"
license = "MIT"
keywords = ["pairwise-alignment", "benchmark", "bioinformatics", "cli"]
categories = ["science"]

default-run = "orchestrator"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }
pa-bench-types = { path = "../pa-bench-types" }
core_affinity = "^0.7"
parse_duration = "^2.1"
itertools = "^0.10"
ctrlc = "3.2.4"
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
walkdir = "2.3.2"
zip-extract = "0.1.1"
ureq = "2.6.1"
tar = "0.4.38"
flate2 = "1.0.25"
streaming-stats = "0.2.3"
edlib_rs = { git = "https://github.com/pairwise-alignment/edlib-rs" }
fxhash = "0.2.1"
num = "0.4.0"
rayon = "1.6.1"
wait4 = "0.1.3"
