[package]
name = "pa-bench-types"
authors = ["Ragnar Groot Koerkamp", "Daniel Liu"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-bench"
license = "MIT"
keywords = ["pairwise-alignment", "benchmark", "bioinformatics", "library"]
readme = "README.md"
categories = ["science"]

[dependencies]
# libs
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }

# pairwise alignment libs
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }

# aligners
rust-wfa2 = { git = "https://github.com/pairwise-alignment/rust-wfa2" }
astar-pairwise-aligner = { git = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner", default-features = false }
