[package]
name = "pa-bench-types"
authors = ["Ragnar Groot Koerkamp", "Daniel Liu"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-bench"
license = "MIT"
keywords = ["pairwise-alignment", "benchmark", "bioinformatics", "library"]
readme = "README.md"
categories = ["science"]

[dependencies]
# libs
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }

# pairwise alignment libs
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }

# aligners
pa-wrapper = { path = "../pa-wrapper" }
parse-size = "1.0.0"
num = "0.4.0"
streaming-stats = "0.2.3"

zip-extract = "0.1.1"
ureq = "2.6.1"
serde_json = "^1.0"
serde_yaml = "^0.9"
walkdir = "2.3.2"
itertools = "^0.10"
parse_duration = "^2.1"
edlib_rs = { git = "https://github.com/pairwise-alignment/edlib-rs" }
rayon = "1.6.1"
flate2 = "1.0.25"
tar = "0.4.38"
fxhash = "0.2.1"
