[package]
name = "pa-bench"
authors = ["Daniel Liu", "Ragnar Groot Koerkamp"]
description = "A binary to run and benchmark multiple pairwise alignment tasks."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-bench"
license = "MIT"
keywords = ["pairwise-alignment", "benchmark", "bioinformatics", "cli"]
categories = ["science"]

default-run = "pa-bench"

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde = "^1.0"
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-generate = { git = "https://github.com/pairwise-alignment/pa-generate" }
pa-bench-types = { path = "../pa-bench-types" }
ctrlc = "3.2.4"
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
streaming-stats = "0.2.3"
num = "0.4.0"
wait4 = "0.1.3"
serde_json = "^1.0"
serde_yaml = "^0.9"
parse_duration = "^2.1"
once_cell = "1.17.1"
pa-wrapper = { version = "0.1.0", path = "../pa-wrapper" }
itertools = "0.10.5"

# Benchmarking
core_affinity = "^0.7"
libc = "^0.2"
rustix = { version = "0.36.5", features = ["process"] }
