[package]
name = "pa-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
itertools = "^0.10"

pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }

# ALIGNERS
# Note: all aligner are optional dependencies and can be disabled.

# Rust-based aligners.
triple_accel = { git = "https://github.com/Daniel-Liu-c0deb0t/triple_accel", optional = true}
astarpa = { git = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner", optional = true, default-features = false }
pa-base-algos = { git = "https://github.com/RagnarGrootKoerkamp/astar-pairwise-aligner", optional = true, default-features = false }
# Wrappers around non-Rust aligners:
edlib_rs = { git = "https://github.com/pairwise-alignment/edlib-rs", optional = true }
rust-wfa2 = { git = "https://github.com/pairwise-alignment/rust-wfa2", optional = true }
ksw2-sys = { git = "https://github.com/pairwise-alignment/ksw2-sys", optional = true }
libc = { version = "^0.2", optional = true }
parasailors = { git = "https://github.com/Daniel-Liu-c0deb0t/parasailors-new", optional=true }
strum = { version = "0.24.1", features = ["derive"] }

# TODO(ragnar): Can this feature detection not be moved into the block aligner crate?
[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", features = ["simd_avx2"], optional = true }
[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", features = ["simd_neon"], optional = true }

[features]
astarpa = ["dep:astarpa", "dep:pa-base-algos"]
block_aligner = ["dep:block-aligner"]
edlib = ["dep:edlib_rs"]
ksw2 = ["dep:ksw2-sys", "dep:libc"]
parasail = ["dep:parasailors"]
triple_accel = ["dep:triple_accel"]
wfa = ["dep:rust-wfa2"]

# Modify this locally as needed.
# Parasail is excluded by default because of slow compile times.
default = ["astarpa", "block_aligner", "edlib", "triple_accel", "wfa", "ksw2"]
