[package]
name = "runner"
authors = ["Daniel Liu", "Ragnar Groot Koerkamp"]
description = "A binary to run and benchmark pairwise alignment tasks."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-bench"
license = "MIT"
keywords = ["pairwise-alignment", "benchmark", "bioinformatics", "cli"]
categories = ["science"]

[dependencies]
clap = { version = "^4.0", features = ["derive"] }
serde_json = "^1.0"
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
pa-bench-types = { path = "../pa-bench-types" }
parse_duration = "^2.1"
itertools = "^0.10"

# Benchmarking utilities:
core_affinity = "^0.7"
cpu-freq = "^0.0.2"
libc = "^0.2"
rustix = { version = "0.36.5", features = ["process"] }

# Aligners:
parasailors = { git = "https://github.com/Daniel-Liu-c0deb0t/parasailors-new" }
edlib_rs = { git = "https://github.com/Daniel-Liu-c0deb0t/edlib-rs" }
rust-wfa2 = { git = "https://github.com/pairwise-alignment/rust-wfa2" }
triple_accel = { git = "https://github.com/Daniel-Liu-c0deb0t/triple_accel" }
ksw2-sys = { git = "https://github.com/rchikhi/ksw2-sys" }

# TODO(ragnar): Can this feature detection not be moved into the block aligner crate?
[target.'cfg(target_arch = "x86_64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", features = ["simd_avx2"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
block-aligner = { git = "https://github.com/Daniel-Liu-c0deb0t/block-aligner", features = ["simd_neon"] }
